# Neptune

./: .github-release-body.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  POLISH_PASS_REPORT.md  README.md  README_GITHUB.md  REFERENCE-LEARNINGS-SUMMARY.md  RELEASE_NOTES.md  project.yml
.claude/: launch.json
.github/workflows/: release.yml  (+2 more)
Neptune/: Info.plist
Neptune.xcodeproj/: project.pbxproj
Scripts/: generate_icon.py  mock_generator.py
docs/: IMPLEMENTATION-NOTES.md  REFERENCE-CODEBASE-LEARNINGS.md  WINDOWS_ROADMAP.md  index.md  reference-codebase-learnings-for-neptune.md  reference-learnings-for-neptune.md
windows/: .gitignore  BUILDABLE_STATUS.md  BUILD_VERIFICATION.md  COMPLETION_REPORT.md  Cargo.toml  FINAL_AUDIT_AND_DELIVERABLES.md  FINAL_INTEGRATION_REPORT.md  INTEGRATION_QUICKSTART.md  README.md  WINDOWS_INTEGRATION_CHANGES.md  WINDOWS_INTEGRATION_STATUS.md  WINDOWS_MVP_PLAN.md  index.html  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
windows/src/: App.tsx
windows/src-tauri/: main.rs  models.rs
windows/src-tauri/capabilities/: default.json
windows/src-tauri/commands/: agents.rs  execution.rs  mod.rs  projects.rs  providers.rs  sessions.rs  settings.rs
windows/src-tauri/integrations/: claude_code.rs  claude_desktop.rs  codex.rs  execution.rs  mod.rs  streaming.rs  vscode.rs
windows/src-tauri/providers/: claude_code.rs  claude_desktop.rs  mod.rs  vscode.rs
windows/src-tauri/state/: mod.rs
windows/src/pages/: Dashboard.tsx  Projects.tsx  Providers.tsx  Sessions.tsx  Settings.tsx
(+36 files in other folders)
