[package]
name = "neptune"
version = "1.0.0"
description = "Local autonomous agent platform for Windows"
authors = ["Neptune Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"  # Windows registry access
windows = { version = "0.48", features = ["Win32_System_Memory"] }

[[bin]]
name = "neptune"
path = "src-tauri/main.rs"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
strip = true     # Strip symbols
